--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -4,7 +4,7 @@ services:
   microservice:
     build:
       context: .
-      dockerfile: build/package/Dockerfile.prod
+      dockerfile: ./Dockerfile.prod
     env_file:
       - .env.prod
     ports:
